--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "moongose": "^1.0.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
