--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
-    "moongose": "^1.0.0",
+    "mongoose": "^8.0.0",
     "nodemon": "^3.1.11",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
